traversal.snake.Snake.scala.error
Compilation error:
Snake:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estFaceMur())
  ^Snake:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return true
  ^Snake:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (getDirection()==Direction.EST)
  ^Snake:8: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    gauche()
    ^Snake:9: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if (estFaceMur())
    ^Snake:10: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
      return true
      ^Snake:11: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (getDirection()==Direction.OUEST)
  ^Snake:12: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    droite()
    ^Snake:13: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if (estFaceMur())
    ^Snake:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
      return true
      ^